--- a/public/repair-garage-dashboard.html
+++ b/public/repair-garage-dashboard.html
@@ -478,6 +478,21 @@
                     <i class="bi bi-box-seam"></i>
                     <span>My Orders</span>
                 </button>
+
+                <div class="nav-section-title">Repair Services</div>
+                <button class="nav-item" data-section="repairRequests">
+                    <i class="bi bi-tools"></i>
+                    <span>Repair Requests</span>
+                    <span class="nav-badge" id="repairRequestsBadge">0</span>
+                </button>
+                <button class="nav-item" data-section="myBids">
+                    <i class="bi bi-cash-stack"></i>
+                    <span>My Bids</span>
+                </button>
+                <button class="nav-item" data-section="bookings">
+                    <i class="bi bi-calendar-check"></i>
+                    <span>Bookings</span>
+                </button>
             </nav>
 
             <div style="padding: 16px; border-top: 1px solid var(--glass-border);">
@@ -730,7 +745,121 @@
                     <p>No orders yet. Search for parts and place orders.</p>
                 </div>
             </section>
+
+            <!-- Repair Requests Section -->
+            <section class="section" id="sectionRepairRequests">
+                <div class="page-header">
+                    <h1 class="page-title">
+                        <i class="bi bi-tools"></i>
+                        Repair Requests
+                    </h1>
+                    <button class="btn-outline" onclick="loadRepairRequests()">
+                        <i class="bi bi-arrow-clockwise"></i> Refresh
+                    </button>
+                </div>
+
+                <div id="repairRequestsContainer">
+                    <div class="empty-state">
+                        <i class="bi bi-hourglass"></i>
+                        <p>Loading repair requests...</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- My Bids Section -->
+            <section class="section" id="sectionMyBids">
+                <div class="page-header">
+                    <h1 class="page-title">
+                        <i class="bi bi-cash-stack"></i>
+                        My Bids
+                    </h1>
+                    <button class="btn-outline" onclick="loadMyBids()">
+                        <i class="bi bi-arrow-clockwise"></i> Refresh
+                    </button>
+                </div>
+
+                <div id="myBidsContainer">
+                    <div class="empty-state">
+                        <i class="bi bi-hourglass"></i>
+                        <p>Loading your bids...</p>
+                    </div>
+                </div>
+            </section>
+
+            <!-- Bookings Section -->
+            <section class="section" id="sectionBookings">
+                <div class="page-header">
+                    <h1 class="page-title">
+                        <i class="bi bi-calendar-check"></i>
+                        Bookings Calendar
+                    </h1>
+                    <button class="btn-outline" onclick="loadBookings()">
+                        <i class="bi bi-arrow-clockwise"></i> Refresh
+                    </button>
+                </div>
+
+                <div id="bookingsContainer">
+                    <div class="empty-state">
+                        <i class="bi bi-hourglass"></i>
+                        <p>Loading bookings...</p>
+                    </div>
+                </div>
+            </section>
         </main>
+    </div>
+
+    <!-- Bid Modal -->
+    <div id="bidModal"
+        style="display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.8); z-index: 1000; justify-content: center; align-items: center;">
+        <div
+            style="background: #1a1a1a; border-radius: 16px; padding: 32px; max-width: 600px; width: 90%; border: 1px solid var(--glass-border);">
+            <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 24px;">
+                <h2 style="color: #fff; margin: 0;">Submit Your Bid</h2>
+                <button onclick="closeBidModal()"
+                    style="background: none; border: none; color: #fff; font-size: 24px; cursor: pointer;">×</button>
+            </div>
+
+            <form id="bidForm">
+                <input type="hidden" id="bidRequestId">
+
+                <div class="form-group">
+                    <label>Total Estimated Cost (QAR) *</label>
+                    <input type="number" id="bidEstimatedCost" class="form-control" placeholder="e.g., 1500" required>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>Labor Cost (QAR)</label>
+                        <input type="number" id="bidLaborCost" class="form-control" placeholder="e.g., 500">
+                    </div>
+                    <div class="form-group">
+                        <label>Parts Cost (QAR)</label>
+                        <input type="number" id="bidPartsCost" class="form-control" placeholder="e.g., 1000">
+                    </div>
+                </div>
+
+                <div class="form-row">
+                    <div class="form-group">
+                        <label>Estimated Duration</label>
+                        <input type="text" id="bidDuration" class="form-control" placeholder="e.g., 2-3 hours, 1 day">
+                    </div>
+                    <div class="form-group">
+                        <label>Warranty (days)</label>
+                        <input type="number" id="bidWarranty" class="form-control" placeholder="e.g., 90" value="0">
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <label>Additional Notes</label>
+                    <textarea id="bidNotes" class="form-control" rows="3"
+                        placeholder="Any additional information for the customer..."></textarea>
+                </div>
+
+                <button type="submit" class="btn-primary" style="width: 100%; margin-top: 16px;">
+                    <i class="bi bi-send"></i> Submit Bid
+                </button>
+            </form>
+        </div>
     </div>
 
     <script src="js/shared/utils.js"></script>
