Insurance Week 5-6: Fraud Analytics Navigation Added
Frontend (insurance-dashboard.html):
- Added Fraud Detection section to sidebar
- Fraud Analytics nav item with red badge
- Ready for dashboard content implementation

Next: Analytics dashboard HTML + JavaScript functions

--- a/public/insurance-dashboard.html
+++ b/public/insurance-dashboard.html
@@ -794,6 +794,13 @@
                     <i class="bi bi-graph-down-arrow"></i>
                     <span>Price Analysis</span>
                 </button>
+
+                <div class="nav-section-title">Fraud Detection</div>
+                <button class="nav-item" data-section="fraudAnalytics">
+                    <i class="bi bi-shield-exclamation"></i>
+                    <span>Fraud Analytics</span>
+                    <span class="nav-badge" id="fraudBadge" style="background: #ef4444;">0</span>
+                </button>
             </nav>
 
             <div class="sidebar-footer" style="padding: 16px; border-top: 1px solid var(--glass-border);">
