--- a/public/insurance-dashboard.html
+++ b/public/insurance-dashboard.html
@@ -50,22 +50,66 @@
         .auth-card .logo-section {
             text-align: center;
             margin-bottom: 32px;
+            padding-top: 20px;
         }
 
         .auth-card .logo-section img {
-            height: 60px;
-            margin-bottom: 16px;
+            width: 100px;
+            height: 100px;
+            margin-bottom: 20px;
+            border-radius: 24px;
+            box-shadow:
+                0 0 0 4px rgba(255, 255, 255, 0.3),
+                0 0 40px 8px rgba(141, 27, 61, 0.4),
+                0 0 80px 16px rgba(141, 27, 61, 0.2),
+                0 20px 40px rgba(0, 0, 0, 0.3);
+            animation: logoFloat 3s ease-in-out infinite, logoGlow 2s ease-in-out infinite alternate;
+            transition: all 0.4s cubic-bezier(0.4, 0, 0.2, 1);
+        }
+
+        .auth-card .logo-section img:hover {
+            transform: scale(1.08) translateY(-4px);
+            box-shadow:
+                0 0 0 6px rgba(255, 255, 255, 0.4),
+                0 0 60px 12px rgba(141, 27, 61, 0.5),
+                0 0 100px 24px rgba(141, 27, 61, 0.3),
+                0 30px 50px rgba(0, 0, 0, 0.35);
+        }
+
+        @keyframes logoFloat {
+
+            0%,
+            100% {
+                transform: translateY(0);
+            }
+
+            50% {
+                transform: translateY(-8px);
+            }
+        }
+
+        @keyframes logoGlow {
+            0% {
+                filter: brightness(1) drop-shadow(0 0 10px rgba(141, 27, 61, 0.3));
+            }
+
+            100% {
+                filter: brightness(1.1) drop-shadow(0 0 20px rgba(141, 27, 61, 0.5));
+            }
         }
 
         .auth-card .logo-section h1 {
-            color: var(--insurance-primary);
-            font-size: 24px;
+            font-size: 32px;
             font-weight: 700;
-            margin: 0;
+            margin-bottom: 8px;
+            background: linear-gradient(135deg, #8D1B3D 0%, #C9A227 100%);
+            -webkit-background-clip: text;
+            background-clip: text;
+            -webkit-text-fill-color: transparent;
         }
 
         .auth-card .logo-section p {
-            color: var(--insurance-accent);
+            color: #64748b;
             font-size: 14px;
             margin-top: 8px;
         }
@@ -74,13 +118,65 @@
             display: inline-flex;
             align-items: center;
             gap: 8px;
-            background: linear-gradient(135deg, var(--insurance-primary), var(--insurance-secondary));
+            background: linear-gradient(135deg, #C9A227, #A68520);
             color: #fff;
             padding: 8px 16px;
             border-radius: 20px;
-            font-size: 12px;
-            font-weight: 600;
+            font-size: 11px;
+            font-weight: 700;
             margin-top: 12px;
+            letter-spacing: 0.5px;
+            text-transform: uppercase;
+            box-shadow: 0 4px 12px rgba(201, 162, 39, 0.3);
+        }
+
+        /* Auth Form Inputs */
+        .auth-card .form-group {
+            margin-bottom: 20px;
+        }
+
+        .auth-card .form-group label {
+            display: block;
+            color: #64748b;
+            font-size: 14px;
+            font-weight: 500;
+            margin-bottom: 8px;
+        }
+
+        .auth-card .form-group input {
+            width: 100%;
+            padding: 14px 16px;
+            background: rgba(255, 255, 255, 0.8);
+            border: 1px solid #e2e8f0;
+            border-radius: 12px;
+            color: #1A1A1A;
+            font-size: 16px;
+            transition: all 0.3s;
+        }
+
+        .auth-card .form-group input:focus {
+            outline: none;
+            border-color: #8D1B3D;
+            box-shadow: 0 0 0 4px rgba(141, 27, 61, 0.15);
+            background: white;
+        }
+
+        .auth-card .btn-primary {
+            width: 100%;
+            padding: 14px;
+            border: none;
+            border-radius: 12px;
+            font-size: 16px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: all 0.3s;
+            background: linear-gradient(135deg, #8D1B3D 0%, #A82050 100%);
+            color: white;
+        }
+
+        .auth-card .btn-primary:hover {
+            transform: translateY(-2px);
+            box-shadow: 0 10px 30px rgba(141, 27, 61, 0.4);
         }
 
         /* App Container */
